Dicscount was added

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -59,9 +59,12 @@
               routerLink="/admin/categories"
               routerLinkActive="active"
             >
-              <i data-lucide="shopping-cart" class="me-1 icon-small"></i>Categories
+              <i data-lucide="categories" class="me-1 icon-small"></i>Categories
             </a>
           </li>
+
+           <li class="nav-item"><a class="nav-link" routerLink="/admin/discounts" routerLinkActive="active">Manage Discounts</a></li>
+
 
           <li class="nav-item dropdown">
             <a
