--- a/src/app/pages/Admin/dashboard/dashboard.component.html
+++ b/src/app/pages/Admin/dashboard/dashboard.component.html
@@ -104,6 +104,22 @@
       </div>
     </div>
 
+    <!-- Discounts Management -->
+     <div class="col-md-6 col-lg-4">
+      <div class="dashboard-card card h-100 shadow-lg border-0">
+        <div class="card-body d-flex flex-column align-items-center justify-content-center p-4">
+          <i data-lucide="tag" class="icon-large text-warning mb-3"></i>
+          <h5 class="card-title fw-bold mb-2">Manage Discount Coupons</h5>
+          <p class="card-text text-muted text-center mb-4">Add, edit Discount Coupons.</p>
+          <button class="btn btn-success w-100 py-2" routerLink="/admin/discounts">
+            <i data-lucide="tags" class="me-2 icon-small"></i>View Discount Coupons
+          </button>
+        </div>
+      </div>
+    </div>
+
+
+
   </div>
 </div>
 
