--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,6 +11,9 @@
         <input type="password" class="form-control" [(ngModel)]="password" name="password" required />
       </div>
       <button class="btn btn-primary" type="submit">Login</button>
+      <br>
+      <br>
+     <p style="color: white;">Didn't Had an account? <a href="signup">Registernow</a></p>
       <div class="text-danger mt-2">{{ error }}</div>
     </form>
   </div>
