--- a/src/app/pages/Admin/customer-detail/customer-detail.component.html
+++ b/src/app/pages/Admin/customer-detail/customer-detail.component.html
@@ -36,7 +36,7 @@
                 type="text"
                 class="form-control"
                 id="userName"
-                [(ngModel)]="customer.userDetails!.userName"
+                [(ngModel)]="customer.userDetails!.username"
                 name="userName"
                 required
               />
