--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -48,7 +48,7 @@
                     type="text"
                     class="form-control"
                     id="userName"
-                    [(ngModel)]="customerRegistration.userDetails.userName"
+                    [(ngModel)]="customerRegistration.userDetails.username"
                     name="userName"
                     required
                   />
