--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,7 +15,7 @@
         <button class="btn btn-primary" type="submit">Login</button>
         <br>
         <br>
-        <p style="color: white;">Didn't Have an account? <a routerLink="/signup">Register now</a></p>
+        <p style="color: black;">Didn't Have an account? <a routerLink="/signup">Register now</a></p>
         <div class="text-danger mt-2">{{ error }}</div>
       </form>
     </div>
