--- a/src/app/pages/customer/orders/orders.component.html
+++ b/src/app/pages/customer/orders/orders.component.html
@@ -43,15 +43,15 @@
                   [attr.aria-controls]="'collapse' + order.id"
                 >
                   Order #{{ order.id }} - Placed on
-                  {{ order.orderDate | date : "mediumDate" }} (Total: ₹{{
+                  {{ transformDate(order.orderDate) | date : "mediumDate" }} (Total: ₹{{
                     order.totalAmount | number : "1.2-2"
                   }})
                   <span
                     class="badge ms-3"
                     [ngClass]="{
-                      'bg-info': order.status === 'PENDING'||'bg-info : order.status === PAID',
+                      'bg-info': order.status === 'PENDING' || order.status === 'DRAFT',
+                      'bg-success': order.status === 'PAID' || order.status === 'DELIVERED',
                       'bg-warning text-dark': order.status === 'SHIPPED',
-                      'bg-success': order.status === 'DELIVERED',
                       'bg-danger': order.status === 'CANCELLED'
                     }"
                     >{{ order.status }}</span
@@ -68,7 +68,7 @@
                   <p><strong>Order ID:</strong> {{ order.id }}</p>
                   <p>
                     <strong>Order Date:</strong>
-                    {{ order.orderDate | date : "medium" }}
+                    {{ transformDate(order.orderDate) | date : "medium" }}
                   </p>
                   <p><strong>Status:</strong> {{ order.status }}</p>
                   <p>
@@ -87,7 +87,6 @@
                       class="list-group-item d-flex justify-content-between align-items-center"
                       *ngFor="let item of order.orderItems"
                     >
-                      <!-- ADDED SAFE NAVIGATION OPERATOR '?.': access productDetails safely -->
                       <span
                         >{{ item.productDetails.name }} (x{{
                           item.quantity
