--- a/src/app/pages/customer/home/home.component.html
+++ b/src/app/pages/customer/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="d-flex flex-column min-vh-100">
-  <!-- Navbar for Authenticated Customer -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container-fluid">
       <a class="navbar-brand text-primary fw-bold" routerLink="/home"
         >E-commerce App</a
@@ -19,7 +18,6 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <!-- Link to the Customer Dashboard Component,  -->
             <a class="nav-link active" aria-current="page" routerLink="/home"
               >Dashboard</a
             >
@@ -63,7 +61,6 @@
     <router-outlet></router-outlet>
   </div>
 
-  <!-- Footer -->
   <footer class="bg-dark text-white text-center p-4 mt-auto">
     <p class="mb-0">&copy; 2025 E-commerce App. All rights reserved.</p>
     <p class="mb-0">
